<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Titulo"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/cocktailName"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/txtcocktail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGetInfo"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/getInfo"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="24sp"
                android:text="@string/information"
                android:textColor="@color/white"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/ingredientOne"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtIngredientUno"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/ingredientTwo"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtIngredientDos"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/ingredientThree"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtIngredientTres"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/ingredientFour"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtIngredientFour"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/ingredientFive"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtIngredientFive"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="@string/Preparation"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/txtPreparation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>